chore : spring rest docs 의존성 및 작업 추가